--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   font-family: Inter;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #212121;
+  color: white;
 }
 
 code {
@@ -17,6 +19,19 @@ h1{
 .navbar{
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
+
+.thumbnail{
+    text-align: center;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 80%;
+    max-width: 1000px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
 
 .card--container{
   display: flex;
