--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ h1{
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
+.caption{
+  margin-left: 2rem;
+  margin-bottom: 2rem;
+  font-weight: 50;
+}
+
 .thumbnail{
     text-align: center;
     display: block;
